tests/input/conf/invalid/invalid2.cnf
[server]
ip = 127.0.0.1

[zone]
name = abc
path = input/zones/valid/abc.zone
